<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/sliderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:sliderScrollTimeInSec="20"
        app:sliderStartAutoCycle="true"
        app:sliderAutoCycleDirection="right"
        app:sliderIndicatorPadding="10dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="@color/MetallicSeaweed"
        app:sliderIndicatorUnselectedColor="@color/BeauBlue"
        app:sliderAnimationDuration="1000"
        android:transitionGroup="true"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorGravity="center_horizontal|bottom" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/MetallicSeaweed"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/newUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:maxLength="10"

        android:textColorHint="@color/MetallicSeaweed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/MetallicSeaweed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUsername" />

    <EditText
        android:id="@+id/firstPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/MetallicSeaweed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <EditText
        android:id="@+id/secondPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColorHint="@color/MetallicSeaweed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPassword" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:background="@color/MetallicSeaweed"
        android:onClick="signUp"
        android:text="Sign up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondPassword"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>