<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/sliderViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sliderAnimationDuration="1000"
        app:sliderAutoCycleDirection="right"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="10dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="@color/MetallicSeaweed"
        app:sliderIndicatorUnselectedColor="@color/BeauBlue"
        app:sliderScrollTimeInSec="20"
        app:sliderStartAutoCycle="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/logo3"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="password"
        android:textColor="@color/MetallicSeaweed"
        android:inputType="textPassword"
        android:textColorHint="@color/MetallicSeaweed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/MetallicSeaweed"
        android:inputType="textPersonName"
        android:textColorHint="@color/MetallicSeaweed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/MetallicSeaweed"
        android:onClick="logIn"
        android:text="Log in"
        android:textColorHint="@color/MetallicSeaweed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:onClick="retrieveForgottenPasswordAccount"
        android:text="@string/forgot_password"
        android:textColor="@color/MetallicSeaweed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/createProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="toSignUp"
        android:text="@string/create_account"
        android:textColor="@color/MetallicSeaweed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        app:layout_constraintVertical_bias="0.012" />


</androidx.constraintlayout.widget.ConstraintLayout>